--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity
             android:name=".AlbumActivity"
-            android:label="@string/title_activity_album"
+            android:label="@string/album_title"
             android:parentActivityName=".AlbumsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
