--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ee.ajapaik.sorter" >
+    package="ee.ajapaik.sorter"
+    android:versionName="1.0"
+    android:versionCode="2">
 
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
