--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ee.ajapaik.sorter"
+    package="pics.sift.android"
     android:versionName="1.0"
     android:versionCode="5">
 
@@ -29,7 +29,7 @@
             android:parentActivityName=".AlbumsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ee.ajapaik.sorter.AlbumsActivity" />
+                android:value="pics.sift.android.AlbumsActivity" />
         </activity>
         <activity
             android:name=".ProfileActivity"
