--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:name=".Application">
         <activity
             android:name=".AlbumsActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +25,7 @@
         <activity
             android:name=".AlbumActivity"
             android:label="@string/album_title"
-            android:parentActivityName=".AlbumsActivity" >
+            android:parentActivityName=".AlbumsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pics.sift.android.AlbumsActivity" />
