--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.code.gson:gson:2.3.+'
+    compile 'com.google.android.gms:play-services:6.5.87+'
     compile 'ch.acra:acra:4.5.0'
 }
