--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,12 @@
 
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission android:name="pics.sift.app.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="pics.sift.app.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +17,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name="pics.sift.app.Application">
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+
         <activity
             android:name="pics.sift.app.AlbumsActivity"
             android:label="@string/app_name"
@@ -42,6 +49,12 @@
                   android:launchMode="singleInstance"
                   android:excludeFromRecents="true"
                   android:finishOnTaskLaunch="true" />
+        <receiver android:name=".GCMReceiver" android:exported="true" android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="pics.sift.app" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
