--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.google.code.gson:gson:2.3.+'
-    compile 'com.google.android.gms:play-services:6.5.87+'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.android.gms:play-services:6.5.87'
     compile 'ch.acra:acra:4.5.0'
+    compile 'com.tonicartos:superslim:0.4.0'
 }
