--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile files('libs/httpcore-4.4.1.jar')
+    compile files('libs/httpclient-4.5.jar')
+    compile files('libs/httpmime-4.5.jar')
     compile 'ch.acra:acra:4.5.0'
     compile 'com.tonicartos:superslim:0.4.0'
 }
