--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "pics.sift.app"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 18
-        versionName "1.1.3"
+        versionCode 19
+        versionName "1.1.4"
     }
     buildTypes {
         release {
@@ -20,9 +20,9 @@ android {
     signingConfigs {
         debug {
             storeFile file("../Release.jks")
-            storePassword AJAPAIK_STORE_PASSWORD
+            storePassword 'release'
             keyAlias 'ajapaik'
-            keyPassword AJAPAIK_KEY_PASSWORD
+            keyPassword 'release'
         }
     }
     packagingOptions {
